openwebui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-forward-auth@kubernetescrd
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  name: ollama
  namespace: open-webui
spec:
  tls:
    - hosts:
        - openwebui.traunseenet.com
      secretName: letsencrypt-prod
  ingressClassName: traefik
  rules:
    - host: openwebui.traunseenet.com
      http:
        paths:
          - backend:
              service:
                name: open-webui
                port:
                  number: 80
            path: /
            pathType: Prefix
